src/Apttus Contract Management/objects/TemplateVersion__c.object
<CustomObject>
    <description>Holds various versions of this template and is a Master-detail to Template</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>User comments for this version</description>
        <inlineHelpText>User comments for this version</inlineHelpText>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <description>Indicates if this version is the version being used</description>
        <formula>TemplateId__r.ActiveVersionId__c ==  Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if this version is the version being used</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mergefields2__c</fullName>
        <description>Template merge fields</description>
        <inlineHelpText>Template merge fields</inlineHelpText>
        <label>Mergefields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mergefields__c</fullName>
        <description>Template merge fields internal</description>
        <inlineHelpText>Template merge fields internal</inlineHelpText>
        <label>Mergefields (Internal)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TemplateId__c</fullName>
        <description>Template this version belongs to.</description>
        <inlineHelpText>Template this version belongs to.</inlineHelpText>
        <label>Template</label>
        <referenceTo>APTS_Template__c</referenceTo>
        <relationshipLabel>Versions</relationshipLabel>
        <relationshipName>Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TextContent__c</fullName>
        <description>Text content of the template</description>
        <inlineHelpText>Text content of the template</inlineHelpText>
        <label>Text Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VersionNumber__c</fullName>
        <description>Represents version number of this record</description>
        <inlineHelpText>Represents version number of this record</inlineHelpText>
        <label>Version Number</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Template Version</label>
    <nameField>
        <label>Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>